cmake_minimum_required(VERSION 3.30)
project(SegundoSemestre)

set(CMAKE_C_STANDARD 11)

add_executable(Ex1 ex1.c
        pilha.h)

add_executable(Ex2 ex2.c)

add_executable(Ex3 ex3.c)

add_executable(Ex4 ex4.c)

add_executable(Ex5 ex5.c)

add_executable(Ex6 ex6.c)

add_executable(Ex7 ex7.c)

add_executable(Ex8 ex8.c)

add_executable(Ex9 ex9.c)

add_executable(Ex10 Ex10.c)

add_executable(Ex11 ex11.c)

add_executable(Pilhas pilhas.c
        pilha.h)